[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arclane"
version = "0.1.0"
description = "Autonomous business engine powered by AI agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.34.0,<1.0",
    "httpx>=0.28.0,<1.0",
    "pydantic>=2.10.0,<3.0",
    "pydantic-settings>=2.7.0,<3.0",
    "email-validator>=2.2.0,<3.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0",
    "aiosqlite>=0.20.0,<1.0",
    "asyncpg>=0.30.0,<1.0",
    "apscheduler>=3.10.0,<4.0",
    "sse-starlette>=2.0.0,<3.0",
    "slowapi>=0.1.9,<1.0",
    "pyjwt>=2.8.0,<3.0",
    "itsdangerous>=2.2.0,<3.0",
    "authlib>=1.3.0,<2.0",
    "alembic>=1.13.0,<2.0",
    "markdown>=3.5.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0",
    "pytest-asyncio>=0.25.0,<1.0",
    "pytest-cov>=6.0.0,<7.0",
    "httpx",
]
docker = [
    "docker>=7.0.0,<8.0",
]
monitoring = [
    "sentry-sdk[fastapi]>=2.0.0,<3.0",
]
optimizer = [
    "prompt-optimizer>=0.1.0,<1.0",
]
telemetry = [
    "gozerai-telemetry @ git+https://github.com/chrisarseno/gozerai-telemetry.git@37c85891e1c560f07b2c3e1664a56c2eddae4bc2",
]

[project.scripts]
arclane = "arclane.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/arclane"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
